<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.aleskovacic.myappportfolio.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/my_nanodegree_apps"
        android:textSize="24sp" />

    <Button
        android:id="@+id/spotify_streamer"
        style="@style/Udacitify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/super_duo"
        style="@style/Udacitify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/super_duo" />

    <Button
        android:id="@+id/build_it_bigger"
        style="@style/Udacitify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/xyz_reader"
        style="@style/Udacitify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/capstone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#b61d1d"
        android:minWidth="200dp"
        android:onClick="onClick"
        android:text="@string/capstone"
        android:textColor="@android:color/white" />

</LinearLayout>
